recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:7: error: value droite is not a member of Unit
    if (i%2==1){avance(100:Double) droite(90:Double)}}
                                   ^FourSquare:10: error: not found: value reculer
  reculer (100:Double)
  ^