recursion.logo.square.FourSquare.scala.code
override def run() {
  avance(100.00) 
  droite(90:Double)
  avance(100:Double)
  
  for (i<-0 to 3){
    if (i%2==1){avance(100:Double) droite(90:Double)}}
  droite(90:Double) 
  avance(200:Double)
  reculer (100:Double)
  droite(90:Double)
  avance(100:Double)
  recule(200:Double)
  
	}

